--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <main>
     <h1>Ch 38 Mx</h1>
   <p>Sesiones de la Ch38 de Generation Mx</p>
+  <p>Febrero 2024</p>
+  </p>
   <hr>
   <button>Haz Clic</button>
   </main>
