ci: funcion saludar a persona

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <p>Febrero 2024</p>
   </p>
   <hr>
-  <button>Haz Clic</button>
+  <button onclick="enviaSaludo()">Haz Clic</button>
+  <button  onclick="enviarSaludoPersona()">Dime tu nombre</button>
   </main>
   <footer>
     
